--- a/src/app/pages/overview/components/event-list/event-list.component.scss
+++ b/src/app/pages/overview/components/event-list/event-list.component.scss
@@ -6,22 +6,21 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .list-item {
 
   @media #{$breakpoint-small} {
     flex: 0 1 calc(100%);
+    margin-bottom: 32px;
   }
   @media #{$breakpoint-medium} {
     flex: 0 1 calc(50% - 24px);
-    margin-right: 24px;
-    margin-bottom: 24px;
+    margin-bottom: 32px;
   }
   @media #{$breakpoint-large} {
     flex: 0 1 calc(33% - 24px);
-    margin-right: 24px;
-    margin-bottom: 24px;
+    margin-bottom: 32px;
   }
 }
