--- a/src/app/pages/details/components/details-toolbar/details-toolbar.component.html
+++ b/src/app/pages/details/components/details-toolbar/details-toolbar.component.html
@@ -1,15 +1,17 @@
-<mat-toolbar>
-  <div class="content flexcontainer">
-    <button mat-icon-button class="toolbar-menu-item" aria-label="back" (click)="onBackClicked()">
-      <mat-icon aria-hidden="false" aria-label="arrow left" fontIcon="arrow_back"></mat-icon>
-    </button>
-    <div class="flexbox"></div>
-    <span class="toolbar-title">{{ appTitle }}</span>
-    <div class="flexbox"></div>
-    <button *ngIf="nav.share" mat-icon-button class="toolbar-menu-item" aria-label="share"
-            (click)="onShareClicked()">
-      <mat-icon aria-hidden="false" aria-label="share" fontIcon="share"></mat-icon>
-    </button>
-    <div *ngIf="!nav.share" class="button-placeholder"></div>
-  </div>
-</mat-toolbar>
+<ng-container *transloco="let t">
+  <mat-toolbar>
+    <div class="content flexcontainer">
+      <button mat-icon-button class="toolbar-menu-item" aria-label="back" (click)="onBackClicked()">
+        <mat-icon aria-hidden="false" aria-label="arrow left" fontIcon="arrow_back"></mat-icon>
+      </button>
+      <div class="flexbox"></div>
+      <span class="toolbar-title">{{ t("app-title") }}</span>
+      <div class="flexbox"></div>
+      <button *ngIf="nav.share" mat-icon-button class="toolbar-menu-item" aria-label="share"
+              (click)="onShareClicked()">
+        <mat-icon aria-hidden="false" aria-label="share" fontIcon="share"></mat-icon>
+      </button>
+      <div *ngIf="!nav.share" class="button-placeholder"></div>
+    </div>
+  </mat-toolbar>
+</ng-container>
