--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,9 +10,9 @@
     background: white;
   }
   @media #{$breakpoint-medium} {
-    background: mat.get-color-from-palette(mat.$grey-palette, 50);
+    background: white;
   }
   @media #{$breakpoint-large} {
-    background: mat.get-color-from-palette(mat.$grey-palette, 50);
+    background: white;
   }
 }
