--- a/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.scss
+++ b/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.scss
@@ -27,13 +27,13 @@
 
   .mat-toolbar {
     @media #{$breakpoint-small} {
-      background: white;
+      background: transparent;
     }
     @media #{$breakpoint-medium} {
-      background: mat.get-color-from-palette(mat.$grey-palette, 50);
+      background: transparent;
     }
     @media #{$breakpoint-large} {
-      background: mat.get-color-from-palette(mat.$grey-palette, 50);
+      background: transparent;
     }
   }
 }
