chore: add color to overview cards

--- a/src/app/pages/details/details.component.scss
+++ b/src/app/pages/details/details.component.scss
@@ -103,6 +103,7 @@ h1 {
 .event-basic-information, .event-tags, .event-detailed-information, .project-action {
   margin-top: 20px;
   margin-bottom: 20px;
+  line-height: 1.3;
 }
 
 .details {
