--- a/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.scss
+++ b/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.scss
@@ -14,9 +14,10 @@
 ::ng-deep .fem-readup-red-theme {
   .toolbar-title {
     color: mat.get-color-from-palette($fem-readup-red-primary, 300);
-    font-family: 'Rubik Moonrocks', serif;
+    font-family: 'Outfit';
     font-size: 2.0rem;
     margin-top: 4px;
+    font-weight: 800;
   }
 
 
