--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -5,10 +5,10 @@
   </app-details-toolbar>
 
   <div *ngIf="event != null" class="content-details">
-    <!--  <img *ngIf="event.image_bucket !== ''" mat-card-image class="event-banner lazyload"-->
-    <!--       [attr.data-src]="event.image_bucket">-->
-    <!--  <img mat-card-image *ngIf="event.image_bucket == ''" class="event-banner lazyload" [attr.data-src]="defaultImageUrl">-->
-    <img mat-card-image class="event-banner lazyload" [attr.data-src]="defaultImageUrl" alt="event image">
+     <img *ngIf="event.image !== undefined" mat-card-image class="event-banner lazyload"
+          [attr.src]="event.image">
+     <img mat-card-image *ngIf="event.image == undefined" class="event-banner lazyload" [attr.src]="defaultImageUrl">
+    <!-- <img mat-card-image class="event-banner lazyload" [attr.data-src]="event.image" alt="event image"> -->
     <div class="event-basic-information">
       <div *ngIf="event.category !== undefined" class="event-category">{{event.category}}</div>
       <h1>{{ event.title }}</h1>
