chore: adjust toolbar padding

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -6,7 +6,7 @@
               <mat-icon aria-hidden="false" aria-label="arrow left" fontIcon="arrow_back"></mat-icon>
             </button>
             <div class="flexbox"></div>
-            <span class="toolbar-title">{{ t("app-title") }}</span>
+            <span class="about-toolbar-title">{{ t("app-title") }}</span>
             <div class="flexbox"></div>
             
           </div>
