--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -111,12 +111,14 @@
 }
 
 ::ng-deep .fem-readup-red-theme {
-  .toolbar-title {
+  .about-toolbar-title {
     color: mat.get-color-from-palette($fem-readup-red-primary, 300);
     font-family: 'Outfit';
     font-size: 2.0rem;
-    margin-top: 4px;
+    margin-top: 2px;
     font-weight: 800;
+    margin-right: 40px;
+
   }
 
   .mat-toolbar {
