fix: close search when scrolled out of view

--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -18,7 +18,7 @@
     </app-search-panel>
   </div>
 
-  <div class="content-overview">
+  <div #contentoverview class="content-overview">
 
     <div class="events-count">{{ t("terms.events", {count: eventsMapFiltered.size}) }}</div>
 
