--- a/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.html
+++ b/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.html
@@ -10,6 +10,9 @@
     <button mat-icon-button class="toolbar-menu-item" aria-label="about" (click)="onAboutClicked()">
       <mat-icon aria-hidden="false" aria-label="about" fontIcon="info"></mat-icon>
     </button>
+    <button mat-icon-button class="toolbar-menu-item" aria-label="bookclub" (click)="onBookClicked()">
+      <mat-icon aria-hidden="false" aria-label="bookclub" fontIcon="book"></mat-icon>
+    </button>
     <button mat-button class="toolbar-menu-item" aria-label="reset filters"
             [@searchResetButtonAnimation]="searchPanelState" (click)="onResetFilterClicked()">
       <span *ngIf="media > mediaType.SMALL">{{ t("menu.reset-filter") | uppercase }}</span>
