chore: update picture on about page

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -15,7 +15,7 @@
 
 <div class="about-content">
 
-    <img about-image class="about-icon lazyload" src="../../assets/icons/icon-512x512.png" alt="event image">
+    <img about-image class="about-icon lazyload" src="../../../assets/icons-maskable/ally_logo.png" alt="event image">
 
 
     <div class="about-title">
