--- a/src/app/pages/bookclub/bookclub.component.html
+++ b/src/app/pages/bookclub/bookclub.component.html
@@ -49,33 +49,25 @@
     
 
     </div>
-    <mat-expansion-panel >
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Leseliste 2023
-        </mat-panel-title>
-
-      </mat-expansion-panel-header>
-      <p>This is the primary content of the panel.</p>
-    </mat-expansion-panel>
-    <mat-expansion-panel >
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Leseliste 2022
-        </mat-panel-title>
-
-      </mat-expansion-panel-header>
-      <p>This is the primary content of the panel.</p>
-    </mat-expansion-panel>
-    <mat-expansion-panel >
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Leseliste 2021
-        </mat-panel-title>
-
-      </mat-expansion-panel-header>
-      <p>This is the primary content of the panel.</p>
-    </mat-expansion-panel>
+    <div *ngFor="let readingList of readingLists">
+      <mat-expansion-panel >
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Leseliste {{ readingList.year }}
+          </mat-panel-title>
+  
+        </mat-expansion-panel-header>
+        <tr>
+          <th>Titel</th>
+          <th>AutorIn</th>
+        </tr>
+        <tr *ngFor="let book of readingList.books">
+          <td>{{ book.title }}</td>
+          <td>{{ book.author }}</td>
+        </tr>
+      </mat-expansion-panel>
+    </div>
+    
 </div>
 
 </ng-container>
