chore: add impressum footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div style="min-height: 100%;" [class]="materialColorService.themeClass">
   <router-outlet></router-outlet>
+  <div class="footer">
+    <a class="impressum-button" href="/about">Impressum</a>
+  </div>
 </div>
