fix: remove www from url

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -45,7 +45,7 @@
             <p><strong>Impressum</strong></p>
           </div>
           <p>Anbieter:<br />AllyUp<br />c/o Block Services<br />Stuttgarter Str. 106<br/>70736 Fellbach</p>
-          <p>Kontakt:<br />E-Mail: allyup.apps@gmail.com<br />Website: www.ally-up.de</p>
+          <p>Kontakt:<br />E-Mail: allyup.apps@gmail.com<br />Website: ally-up.de</p>
         </div>
         <mat-expansion-panel >
           <mat-expansion-panel-header>
