feat: add impressum #16
* feat: add impressum #16

* chore: add impressum footer

* fix: remove www from url

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -38,5 +38,30 @@
           Bei Rückfragen, Feedback oder Anregungen, wende dich gern an uns.
       </p>
       </div>
+      <div class="impressum">
+        <div class="footer">
+        
+          <div class = footer-title>
+            <p><strong>Impressum</strong></p>
+          </div>
+          <p>Anbieter:<br />AllyUp<br />c/o Block Services<br />Stuttgarter Str. 106<br/>70736 Fellbach</p>
+          <p>Kontakt:<br />E-Mail: allyup.apps@gmail.com<br />Website: ally-up.de</p>
+        </div>
+        <mat-expansion-panel >
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Informationen zu externen Links
+            </mat-panel-title>
+    
+          </mat-expansion-panel-header>
+          <p>
+            Die Schaltfläche "Veranstaltungsdetails ansehen" bei jeder angezeigten Veranstaltung führt zur externen Seite des Anbieters der Veranstaltung. 
+            Bei Links handelt es sich stets um dynamische Verweisungen. Wir haben die Quellen beim Einbinden geprüft, können sie jedoch nicht ständig auf Veränderungen untersuchen.
+            Daher übernehmen wir keine Gewähr für die Richtigkeit, Vollständigkeit und Aktualität der bereitgestellten Inhalte. 
+          </p>
+        </mat-expansion-panel>
+    
+      </div>
   </div>
+  
 </ng-container>
