chore: fix toolbar width

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -151,6 +151,7 @@
   }
 
   .mat-toolbar {
+    width: -webkit-fill-available;;
     @media #{$breakpoint-small} {
       background: transparent;
       margin: 20px;
