--- a/src/app/pages/bookclub/bookclub.component.scss
+++ b/src/app/pages/bookclub/bookclub.component.scss
@@ -127,6 +127,7 @@
   }
 
   .mat-toolbar {
+    width: -webkit-fill-available;;
 
     @media #{$breakpoint-small} {
       background: transparent;
