--- a/src/app/pages/bookclub/bookclub.component.html
+++ b/src/app/pages/bookclub/bookclub.component.html
@@ -60,10 +60,13 @@
         <tr>
           <th>Titel</th>
           <th>AutorIn</th>
+          <th>Monat</th>
         </tr>
         <tr *ngFor="let book of readingList.books">
           <td>{{ book.title }}</td>
           <td>{{ book.author }}</td>
+          <td>{{ months[book.month - 1] }}</td>
+
         </tr>
       </mat-expansion-panel>
     </div>
